--- a/Resources/views/CRUD/history.html.twig
+++ b/Resources/views/CRUD/history.html.twig
@@ -9,7 +9,7 @@ file that was distributed with this source code.
 
 #}
 
-{% extends 'SonataAdminBundle:CRUD:base_history.html.twig' %}
+{% extends '@SonataAdmin/CRUD/base_history.html.twig' %}
 
 {% block content %}
     <div class="row">
