--- a/Resources/views/CRUD/list_trash_inner_row.html.twig
+++ b/Resources/views/CRUD/list_trash_inner_row.html.twig
@@ -11,13 +11,21 @@ file that was distributed with this source code.
 
 {% for field_description in admin.list.elements %}
     {% if field_description.name == '_action' %}
-        {% if admin.isGranted('EDIT', object) and admin.hasRoute('edit') %}
+        {% if admin.isGranted('DELETE', object) %}
             <td class="sonata-ba-list-field sonata-ba-list-field-{{ field_description.type }}" objectId="{{ admin.id(object) }}">
                 <div class="btn-group">
-                    <a href="{{ admin.generateObjectUrl('untrash', object) }}" class="btn btn-sm btn-default delete_link" title="{{ 'action_untrash'|trans({}, 'PicossSonataExtraAdminBundle') }}">
-                        <i class="fa fa-reply"></i>
-                        {{ 'action_restore'|trans({}, 'PicossSonataExtraAdminBundle') }}
-                    </a>
+                    {% if admin.hasRoute('untrash') %}
+                        <a href="{{ admin.generateObjectUrl('untrash', object) }}" class="btn btn-sm btn-default delete_link" title="{{ 'action_untrash'|trans({}, 'PicossSonataExtraAdminBundle') }}">
+                            <i class="fa fa-reply"></i>
+                            {{ 'action_restore'|trans({}, 'PicossSonataExtraAdminBundle') }}
+                        </a>
+                    {% endif %}
+                    {% if admin.hasRoute('hard_delete') %}
+                        <a href="{{ admin.generateObjectUrl('hard_delete', object) }}" class="btn btn-sm btn-default delete_link" title="{{ 'action_hard_delete'|trans({}, 'PicossSonataExtraAdminBundle') }}">
+                            <i class="fa fa-times"></i>
+                            {{ 'action_hard_delete'|trans({}, 'PicossSonataExtraAdminBundle') }}
+                        </a>
+                    {% endif %}
                 </div>
             </td>
         {% endif %}
