--- a/Resources/views/CRUD/trash.html.twig
+++ b/Resources/views/CRUD/trash.html.twig
@@ -9,7 +9,7 @@ file that was distributed with this source code.
 
 #}
 
-{% extends 'SonataAdminBundle:CRUD:base_list.html.twig' %}
+{% extends '@SonataAdmin/CRUD/base_list.html.twig' %}
 
 {%- block actions -%}
     {% include '@SonataAdmin/CRUD/action_buttons.html.twig' %}
