--- a/Resources/views/CRUD/hard_delete_all.html.twig
+++ b/Resources/views/CRUD/hard_delete_all.html.twig
@@ -21,23 +21,21 @@ file that was distributed with this source code.
     <div class="sonata-ba-delete">
         <div class="box box-danger">
             <div class="box-header">
-                <h3 class="box-title">{{ 'title_restore'|trans({}, 'PicossSonataExtraAdminBundle') }}</h3>
+                <h3 class="box-title">{{ 'title_hard_delete_all'|trans({}, 'PicossSonataExtraAdminBundle') }}</h3>
             </div>
             <div class="box-body">
-                {{ 'message_restore_confirmation'|trans({'%object%': admin.toString(object)}, 'PicossSonataExtraAdminBundle') }}
+                {{ 'message_hard_delete_all_confirmation'|trans({'%count%': count}, 'PicossSonataExtraAdminBundle') }}
             </div>
             <div class="box-footer clearfix">
-                <form method="POST" action="{{ admin.generateObjectUrl('untrash', object) }}">
+                <form method="POST" action="{{ admin.generateUrl('hard_delete_all') }}">
                     <input type="hidden" name="_sonata_csrf_token" value="{{ csrf_token }}">
-
-                    <button type="submit" class="btn btn-danger"><i class="fa fa-reply fa-lg"></i> {{ 'btn_restore'|trans({}, 'PicossSonataExtraAdminBundle') }}</button>
-                    {% if admin.hasRoute('trash') and admin.hasAccess('edit', object) %}
-                        {{ 'restore_or'|trans({}, 'PicossSonataExtraAdminBundle') }}
-
-                        <a class="btn btn-success" href="{{ admin.generateUrl('trash') }}">
-                            <i class="fa fa-trash-o fa-lg"></i>
-                            {{ 'link_action_trash'|trans({}, 'PicossSonataExtraAdminBundle') }}</a>
+                    {% if admin.hasRoute('hard_delete_all') and admin.hasAccess('delete') %}
+                        <button type="submit" class="btn btn-danger"><i class="fa fa-times fa-lg"></i> {{ 'btn_hard_delete_all'|trans({}, 'PicossSonataExtraAdminBundle') }}</button>
+                            {{ 'delete_or'|trans({}, 'PicossSonataExtraAdminBundle') }}
                     {% endif %}
+                    <a class="btn btn-success" href="{{ admin.generateUrl('trash') }}">
+                        <i class="fa fa-trash-o fa-lg"></i>
+                        {{ 'link_action_trash'|trans({}, 'PicossSonataExtraAdminBundle') }}</a>
                 </form>
             </div>
         </div>
